--- a/.waypoint.yaml
+++ b/.waypoint.yaml
@@ -1,4 +1,4 @@
-project: unity-is-sre-isolated-test
+project: unity-ie-sre-isolated-test
 auth:
   kind: credsFile
-  value: ${HOME}/.gcp/test.json
+  value: /Users/iana/.gcp/isolated/test.json
