--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -52,3 +52,7 @@
 [[constraint]]
   name = "k8s.io/helm"
   branch = "master"
+
+[[constraint]]
+  name = "github.com/ghodss/yaml"
+  version = "1.0.0"
