--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -54,5 +54,5 @@
   branch = "master"
 
 [[constraint]]
-  name = "github.com/ghodss/yaml"
-  version = "1.0.0"
+  branch = "master"
+  name = "github.com/gosuri/uitable"
