--- a/.waypoint.yaml
+++ b/.waypoint.yaml
@@ -1,43 +1,28 @@
 auth:
   kind: credsFile
-  project: unity-ie-sre-isolated-test
-  value: /Users/iana/.gcp/isolated/test.json
+  project: test
+  value: ~/.gcp/isolated/test.json
 deployments:
   stage:
     app: onboarding
     cleanup: true
-    project: unity-ie-sre-isolated-test
+    project: test
     docker:
-     repo: gcr.io/unity-ie-sre-isolated-test
-     creds: docker-credentials-gcr
-     context: ~/repos/onboarding
-     file: ~/repos/onboarding/Dockerfile
+      repo: gcr.io/test
+      creds: docker-credentials-gcr
+      context: ~/repos/onboarding
+      file: ~/repos/onboarding/Dockerfile
     helm:
-      name: https://chartmuseum.test.sre.ie.internal.unity3d.com
+      name: https://chartmuseum
       chartDir: ~/repos/onboarding/manifests/onboarding
       destDir: ~/repos/onboarding/manifests
       save: true
       set:
       - image.tag=${VERSION}
-      - secret.key=$(cat .${TARGET}_key | base64)
-      - onboarding.gitHash=$(git rev-parse --short=10 HEAD)
-      - onboarding.gitBranch=$(git symbolic-ref --short HEAD)
-  prd:
-    app: onboarding
-    cleanup: true
-    project: unity-ie-sre-isolated-prd
-    docker:
-     repo: gcr.io/unity-ie-sre-isolated-prd
-     creds: docker-credentials-gcr
-     context: ~/repos/onboarding
-     file: ~/repos/onboarding/Dockerfile
-    helm:
-      name: https://chartmuseum.sre.ie.internal.unity3d.com
-      chartDir: ~/repos/onboarding/manifests/onboarding
-      destDir: ~/repos/onboarding/manifests
-      save: true
-      set:
-      - image.tag=${VERSION}
-      - secret.key=$(cat .${TARGET}_key | base64)
-      - onboarding.gitHash=$(git rev-parse --short=10 HEAD)
-      - onboarding.gitBranch=$(git symbolic-ref --short HEAD)
+    tiller:
+      namespace: kube-system
+      context: test
+      endpoint: https://api.k8s
+      labels:
+        app: helm
+        name: tiller
